fix environment passing